搭建相关专辑界面

--- a/喜马拉雅/classes/discover(发现)/view/AlbumDeail(专辑详情)/RCAlbumHeaderView.xib
+++ b/喜马拉雅/classes/discover(发现)/view/AlbumDeail(专辑详情)/RCAlbumHeaderView.xib
@@ -87,7 +87,7 @@
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jUh-H9-cgY">
                             <rect key="frame" x="227" y="1" width="93" height="39"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <state key="normal" title="推荐专辑">
+                            <state key="normal" title="相关专辑">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
