--- a/喜马拉雅/classes/discover(发现)/view/Album(专辑)/RCAlbumViewCell.xib
+++ b/喜马拉雅/classes/discover(发现)/view/Album(专辑)/RCAlbumViewCell.xib
@@ -50,10 +50,11 @@
                                     <constraint firstAttribute="height" constant="19" id="A54-bD-hJ5"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                <state key="normal" image="zone_join_n">
+                                <state key="normal" image="find_album_unfav_n">
                                     <color key="titleColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <state key="selected" image="find_album_fav_n"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z9Q-uV-RYT">
                                 <rect key="frame" x="148" y="51" width="38" height="14"/>
@@ -124,8 +125,9 @@
     </objects>
     <resources>
         <image name="albumInfoCell_tracks_mark" width="13" height="13"/>
+        <image name="find_album_fav_n" width="58" height="23"/>
+        <image name="find_album_unfav_n" width="58" height="23"/>
         <image name="sound_album" width="22" height="21"/>
         <image name="sound_playtimes" width="6" height="8"/>
-        <image name="zone_join_n" width="64" height="24"/>
     </resources>
 </document>
